Move old tests from JUnit4 to JUnit Jupiter