@@ -4,17 +4,16 @@ import io.micronaut.context.ApplicationContext;
 import org.junit.jupiter.api.Test;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
-public class OrderTest {
+class OrderTest {
 
     @Test
-    public void testOrderOnFactories() {
+    void testOrderOnFactories() {
         ApplicationContext applicationContext = ApplicationContext.run();
         List<RateLimit> rateLimits = applicationContext.streamOfType(RateLimit.class)
-                .collect(Collectors.toList());
+                .toList();
 
         assertEquals(
                 2,
